# ai_funnel

./: README.md
AI_Funnel_Builder-main/backend/: .env.example  Dockerfile  alembic.ini  discover_routes.ps1  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_openai_test.py  test_auth_flow.ps1  test_endpoints.ps1  tokens.json
AI_Funnel_Builder-main/backend/alembic/: alembic.ini  env.py
AI_Funnel_Builder-main/backend/app/: main.py
AI_Funnel_Builder-main/backend/app/ai/: __init__.py  ab_test_generator.py  ad_copy_generator.py  audience_analyzer.py  completion_predictor.py  conversion_optimizer.py  data_preprocessing.py  feature_engineering.py  format_selector.py  funnel_generator.py  lead_scorer.py  openai_client.py  personalization_engine.py  prompt_cache.py  prompt_templates.py  question_optimizer.py  recommendation_engine.py
AI_Funnel_Builder-main/backend/app/api/: __init__.py  router.py
AI_Funnel_Builder-main/backend/app/core/: cache.py  config.py  database.py  dependencies.py  security.py
AI_Funnel_Builder-main/backend/app/middleware/: __init__.py  auth.py  error_handler.py  rate_limiter.py  request_logger.py
AI_Funnel_Builder-main/backend/app/models/: __init__.py  ai_task.py  analytics_daily.py  benchmark.py  campaign.py  event.py  funnel.py  group.py  integration.py  lead.py  privacy.py  project.py  question.py  question_effectiveness.py  response.py  response_answer.py  subscription.py  template.py  user.py  webhook_log.py
AI_Funnel_Builder-main/backend/app/schemas/: __init__.py  ab_testing.py  ai.py  analytics.py  answer.py  (+16 more)
(+206 files in other folders)
