# Create pyproject.toml (Poetry)
@"
[tool.poetry]
name = "funnelml-backend"
version = "1.0.0"
description = "Enterprise AI Funnel Platform"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
redis = {extras = ["asyncio"], version = "^5.0.1"}
celery = "^5.3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.27.0"
openai = "^1.6.1"
prometheus-client = "^0.20.0"
"@ | Out-File -FilePath pyproject.toml -Encoding utf8

# Create requirements.txt (pip fallback)
@"
fastapi==0.104.1
uvicorn[standard]==0.24.0
sqlalchemy[asyncio]==2.0.23
asyncpg==0.29.0
alembic==1.13.1
pydantic[email]==2.5.2
redis[asyncio]==5.0.1
celery==5.3.6
python-jose[cryptography]==3.3.0
passlib[bcrypt]==1.7.4
python-multipart==0.0.6
httpx==0.27.0
openai==1.6.1
prometheus-client==0.20.0
psycopg2-binary==2.9.9
"@ | Out-File -FilePath requirements.txt -Encoding utf8

# Create simple Dockerfile (NO complex multi-stage!)
@"
FROM python:3.12-slim

WORKDIR /app
COPY requirements.txt .
RUN pip install --no-cache-dir -r requirements.txt

COPY . .
EXPOSE 8000

CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
"@ | Out-File -FilePath Dockerfile -Encoding utf8
